Polish extension UI and redesign settings page
Align Chrome extension styling with the main Tiddly frontend design system and redesign the settings page for a better tag selection experience.

- Restyle popup and options pages to match frontend design tokens: dark buttons (#111827), 8px input radius, ui-sans-serif font stack, gray focus rings, bordered status alerts
- Replace default tags text input and Test Connection button with interactive tag chip selector that loads tags from API and auto-saves selections
- Add gear icon settings link to save and search views in popup
- Position save-view gear icon absolutely so it doesn't push form content down
- Add favicons next to search result titles, remove date display from results
- Simplify Test Connection to just return success (no email/auth0_id display)
- Show all tags instead of filtering to bookmark-only tags
- Auto-convert underscores to hyphens in tag input to match API validation rules
- Update font size to 14px to match frontend
- Add spacing above Default Tags section in options page
- Update all `reading_list` examples to `reading-list` in README and plan

--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -23,19 +23,15 @@
       <p id="token-error" class="error" hidden></p>
     </div>
 
-    <div class="field">
-      <label for="default-tags">Default Tags</label>
-      <input type="text" id="default-tags" placeholder="reading_list, chrome">
-      <p class="help">Comma-separated. Added to every bookmark you save.</p>
-    </div>
-
-    <div class="actions">
-      <button id="save-btn" class="btn-primary">Save</button>
-      <button id="test-btn" class="btn-secondary">Test Connection</button>
-    </div>
-
+    <button id="save-btn" class="btn-primary">Save</button>
     <div id="save-status" class="status" hidden></div>
-    <div id="test-status" class="status" hidden></div>
+
+    <div id="tags-section" class="field" hidden>
+      <label>Default Tags</label>
+      <p class="help">Selected tags are added to every bookmark you save.</p>
+      <div id="tag-chips" class="tag-chips"></div>
+      <div id="tags-status" class="help" hidden></div>
+    </div>
   </div>
   <script src="options.js"></script>
 </body>
