Fix spinner and layout bugs in Chrome extension
The `hidden` HTML attribute was silently broken by `display: flex` rules
on toggle-able elements, since author stylesheets override the UA
`[hidden] { display: none }`.

- Remove `display: flex` from `.popup` and `#save-view`/`#search-view` so `hidden` toggling works
- Replace flex centering on `.loading` with `text-align: center` to avoid the conflict
- Add explicit `[hidden] { display: none }` overrides for `#loading-indicator` and `#search-loading` which need flex centering
- Add min-height to both loading indicators to prevent layout shift when content loads
- Replace text-based "Loading page data..." with animated spinner in save view
- Add spinner with loading state to search view (clear results, show spinner, hide on response)
- Add accessibility: `role="status"`, `aria-label`, `.sr-only` text, `prefers-reduced-motion` support

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -21,7 +21,10 @@
           <circle cx="12" cy="12" r="3" stroke-width="2"/>
         </svg>
       </button>
-      <div id="loading-indicator" class="loading">Loading page data...</div>
+      <div id="loading-indicator" class="loading" role="status" aria-label="Loading">
+        <div class="spinner"></div>
+        <span class="sr-only">Loading</span>
+      </div>
       <form id="save-form" hidden>
         <div class="field">
           <label for="url">URL</label>
@@ -56,6 +59,10 @@
             <circle cx="12" cy="12" r="3" stroke-width="2"/>
           </svg>
         </button>
+      </div>
+      <div id="search-loading" class="loading" role="status" aria-label="Loading" hidden>
+        <div class="spinner"></div>
+        <span class="sr-only">Loading</span>
       </div>
       <div id="search-results" class="search-results"></div>
       <button id="load-more" class="btn-secondary btn-full" hidden>Load more</button>
