--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -17,7 +17,7 @@
       </div>
       <p class="help">
         <a href="https://tiddly.me/app/settings/tokens" target="_blank" rel="noopener">
-          Get a token at tiddly.me
+          Create a token at tiddly.me
         </a>
       </p>
       <p id="token-error" class="error" hidden></p>
