Add clear tags button to save form
- "Clear" link appears next to the Tags label when non-default tags are selected
- Clicking it resets to only the default tags from settings, removing last-used tags that carried over from a previous save
- Reduce save dialog height from 405px to 390px

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -40,7 +40,10 @@
           <textarea id="description" rows="2" maxlength="1000"></textarea>
         </div>
         <div class="field">
-          <label for="tags-input">Tags</label>
+          <div class="label-row">
+            <label for="tags-input">Tags</label>
+            <button type="button" id="clear-tags" class="clear-link" hidden>Clear</button>
+          </div>
           <input type="text" id="tags-input" placeholder="Add tags...">
           <div id="tag-chips" class="tag-chips"></div>
           <div id="tag-suggestions" class="tag-suggestions" hidden></div>
